tests/neg/toplevel-cyclic/defs_1.scala
type A = B  // error: recursion limit exceeded // error: recursion limit exceeded

